# fraud-detection

./: .gitignore  readme.md
fraud-detection-api/: docker-compose.yml  pyproject.toml  readme.md
fraud-detection-api/src/api/: main.py
fraud-detection-api/src/api/helpers/: __init__.py  env.py  inputs.py  lifespan.py
fraud-detection-cache/: __init__.py
fraud-detection-job/: docker-compose.yml  pyproject.toml  readme.md
fraud-detection-job/src/job/: main.py
fraud-detection-job/src/job/helpers/: paths.py
fraud-detection-job/src/job/tasks/: __init__.py  evaluate.py  prepare.py  train.py
